fix: word slider misplaced on mobile mode

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ section {
     }
 
     .slide {
-      @apply absolute pt-0 px-2 md:px-5 py-[30px] h-[48px] md:h-[78px] md:translate-y-1 translate-y-0 overflow-hidden;
+      @apply relative pt-0 px-2 md:px-5 py-[30px] h-[48px] md:h-[78px] md:translate-y-1 translate-y-0 overflow-hidden;
     }
   }
 
